--- a/README.html
+++ b/README.html
@@ -9,7 +9,7 @@
 <p>Finding documentation for Ruby gems and libraries is often time-consuming.
 ORI addresses this issue by bringing RI documentation right to your IRB console in a <strong>simple</strong>, <strong>consistent</strong> and truly <strong>object-oriented</strong> way.</p>
 
-<p>If you’re too lazy to read this README, <a href="http://screecast">watch this screencast</a> instead.</p>
+<p>If you’re too lazy to read this README, <a href="http://www.screencast-o-matic.com/watch/cXVVYuXpH">watch this screencast</a> instead.</p>
 
 <h2 id="setup">Setup</h2>
 
@@ -62,7 +62,7 @@ obj.ri
 <h3 id="request-ri-on-a-method">Request RI on a Method</h3>
 
 <pre><code>String.ri :upcase
-"".ri "upcase"
+"".ri :upcase
 [].ri :sort
 Hash.ri :[]
 Hash.ri "::[]"
