--- a/README.html
+++ b/README.html
@@ -53,7 +53,7 @@ String.ri
 5.ri
 </code></pre>
 
-<p>So that’s fairly straightforward – grab a class or class instance and call <tt>ri</tt> on it:</p>
+<p>So that’s fairly straightforward – grab a class or class instance and call <code>ri</code> on it:</p>
 
 <pre><code>obj = SomeKlass.new
 obj.ri
